# diagrams-cairo-raster

./: .gitignore  LICENSE  diagrams-cairo-raster.cabal  index.html  params.json
css/: stylesheet.css
example/: Benchmarks.hs  GtkCairoLoadImage.hs  GtkCairoRaster.hs  GtkCairoRepa.hs  GtkHelper.hs  PlainRaster.hs  RepaRaster.hs
haddock/: Diagrams-Backend-Cairo-Raster-Internal.html  Diagrams-Backend-Cairo-Raster-Repa.html  Diagrams-Backend-Cairo-Raster.html  doc-index.html  haddock-dark.css  index-frames.html  index.html  mini_Diagrams-Backend-Cairo-Raster-Internal.html  mini_Diagrams-Backend-Cairo-Raster-Repa.html  mini_Diagrams-Backend-Cairo-Raster.html
site/: index.md  site.hs  site.sh
site/css/: highlight.css
site/tmpl/: default.html
src/Diagrams/Backend/Cairo/: Raster.hs
src/Diagrams/Backend/Cairo/Raster/: Internal.hs  Repa.hs
util/: haddock.sh
